# fact-check

./: .gitignore  app.py  dockerfile  pyproject.toml  requirements.txt  setup.py  template.py  trails.ipynb
