[tool.poetry]
name = "fact-check"
version = "0.0.1"
description = "A fact checker for video  transcripts using large language models"
authors = ["Mukul Namagiri mukulnamagiri1@gmail.com"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
dash = "^2.0.0"
pandas = "^1.3.0"
dash-bootstrap-components = "^1.0.0"
plotly = "^5.0.0"
openpyxl = "^3.0.7"
dash-player = "^0.0.1"

[tool.poetry.dev-dependencies]
mock = "3.0.5"
httpretty = "1.1.4"
coveralls = "1.11.1"
coverage = "5.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "python app.py"

[tool.black]
line-length = 88
target-version = ['py37']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, E266, E501, W503"
max-complexity = 18
select = "B,C,E,F,W,T4,B9"